# cisco.radkit

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.rst  EXEC_AND_WAIT_ENHANCEMENTS.md  Makefile  RADKIT_MODULE_ENHANCEMENTS.md  README.md  example-playbook.yml  galaxy.yml  pyproject.toml  radkit_devices.yml  requirements.txt  requirements.yml  setup.cfg  test_empty_prompts_fix.yml  test_exec_and_wait_enhanced.yml
.github/: CODEOWNERS  INTEGRATION_TESTING.md  secrets-template.md  setup-local-testing.sh
.github/scripts/: encode-radkit-certs.sh  setup-radkit-certs.sh  test-radkit-setup.sh  validate-integration-targets.sh
.github/workflows/: README.md  docs-build.yml  docs-deploy.yml  docs-quality.yml  integration-status.yml  integration-tests.yml  release.yml  unit-tests.yml
docs/: .gitignore  antsibull-docs.cfg  build.sh  conf.py  requirements.txt  ssh_vs_port_forwarding.md
docs/collections/: environment_variables.html  index_connection.html  index_inventory.html  index_module.html
docs/rst/: index.rst
meta/: main.yaml
playbooks/: genie_diff.yml  genie_parsed_command.yml  http_proxy.yml  network_cli_connection_plugin_example.yml  port_forward.yml  radkit_command.yml  ssh_proxy.yml  swagger.yml  terminal_connection_plugin_example.yml
plugins/connection/: network_cli.py  radkit_context.py  terminal.py
plugins/doc_fragments/: connection_persistent.py  radkit_client.py
plugins/inventory/: radkit.py
plugins/module_utils/: client.py  exceptions.py
scripts/: run-tests.sh
tests/: __init__.py  config.yml  conftest.py  requirements.txt
(+111 files in other folders)
